name:                re2
version:             0.0
license:             BSD3
license-file:        LICENSE
synopsis:            Interface to the RE2 regex library
category:            Text, Regex
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
homepage:            https://github.com/kmcallister/haskell-re2
build-type:          Simple
cabal-version:       >=1.6
description:
    This library provides a Haskell interface to the RE2 regular expression library,
    available from <http://code.google.com/p/re2/>.
    .
    RE2 is very fast, and is free of the exponential-time worst-case behavior common
    to backtracking-based regex libraries.  RE2 implements most Perl\/PCRE regex
    features, and can also be restricted to POSIX egrep syntax.
    .
    This interface supports the Unicode @String@ and @Text@ types, as well as
    UTF8-encoded @ByteString@s and Latin1-encoded @ByteString@s.  You can build a
    regex from one of these types and apply it to another.
    .
    This package also implements a plain C API for a subset of RE2.  This wrapping
    layer could be useful on its own.

extra-source-files:
    README
  , cbits/cre2.h

library
  exposed-modules:
      Text.RE2.Types
    , Text.RE2.ByteString
    , Text.RE2.Text
    , Text.RE2.String
  other-modules:
      Text.RE2.C
    , Text.RE2.IO
    , Text.RE2.Types.Internal
  ghc-options:
      -Wall
  build-depends:
      base        >= 3 && < 5
    , bytestring  >= 0.9
    , containers  >= 0.4
    , text        >= 0.11
    , utf8-string >= 0.3
  other-extensions:
      ForeignFunctionInterface
    , EmptyDataDecls
    , DeriveDataTypeable

  include-dirs:
    cbits/
  c-sources:
    cbits/cre2.cpp
  cc-options:
    -Wall
  extra-libraries:
    re2

source-repository head
    type:     git
    location: git://github.com/kmcallister/haskell-re2.git
